fixed some spacing and max-width

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,15 +1,16 @@
 /* --------- Universal Contents --------- */
 
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
+/* html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;} */
 
 * {
-  max-width: 400px;
+  max-width: 1200px;
   margin: 0;
   height: auto;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  justify-self: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* --------- Heading Contents --------- */
@@ -28,8 +29,13 @@ header {
 
 /* --------- Form Contents --------- */
 
+main {
+  padding: 1rem 0;
+}
+
 .labels {
   padding-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 fieldset {
@@ -37,6 +43,10 @@ fieldset {
   border: 1px solid rgba(0,0,0,0.1);
   border-radius: 4px;
   padding: 0 1.5rem;
+}
+
+.product-name {
+  padding-top: 2rem;
 }
 
 .optional {
@@ -56,7 +66,6 @@ fieldset {
 
 .wf1 input[type="text"],
 #date,
-/* .wf1 input[type="date"], */
 .wf1 select,
 #textarea {
   background-color: #fff;
@@ -65,7 +74,7 @@ fieldset {
   padding: .75rem;
   color: #555;
   width: 100%;
-  max-width: 400px;
+  max-width: 1200px;
   appearance: none;
 }
 
@@ -82,7 +91,7 @@ fieldset {
 
 .wf1 input[type="submit"] {
   padding: .75rem;
-  margin: 1rem 0;
+  margin: 1rem 0 2rem 0;
   font-family: sans-serif;
   font-size: 1rem;
   font-weight: bold;
@@ -97,7 +106,14 @@ fieldset {
   color: darkred;
 }
 
+
+
 /* --------- Review Stars ---------- */
+
+.rating {
+  max-width: 400px;
+  margin-right: 100%;
+}
 
 input[type="radio"] {
   display: none;
